--- a/blog/src/main/resources/templates/blog/detail.html
+++ b/blog/src/main/resources/templates/blog/detail.html
@@ -24,6 +24,9 @@
             <li class="list-group-item">
                 <strong>Nội dung:</strong> <span th:text="${blog.context}"></span>
             </li>
+            <li class="list-group-item">
+                <strong>Thể loại:</strong> <span th:text="${blog.category.name}"></span>
+            </li>
         </ul>
 
         <div class="mt-3 text-end">
